[gd_scene load_steps=10 format=3 uid="uid://b5l7prnxix5uf"]

[ext_resource type="Script" path="res://Collectables/collectable.gd" id="1_rv0oe"]
[ext_resource type="Texture2D" uid="uid://b6ggif8sjuyby" path="res://Collectables/drop_box.svg" id="2_7tenn"]
[ext_resource type="AudioStream" uid="uid://w4vgojt0y6i8" path="res://Collectables/Star/star_collected.wav" id="2_53su3"]
[ext_resource type="Material" uid="uid://ckh2l5ahtylxl" path="res://Shader/drop_shadow.tres" id="2_uvodg"]

[sub_resource type="Curve" id="Curve_011u0"]
_data = [Vector2(0.0078534, 0.290566), 0.0, 0.0, 0, 0, Vector2(0.767176, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_sk0uw"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="Shader" id="Shader_hmw3a"]
code = "shader_type canvas_item;

uniform vec4 shine_color : source_color = vec4(1.0);
uniform float shine_speed : hint_range(0.0, 10.0, 0.1) = 1.0;
uniform float shine_size : hint_range(0.01, 1.0, 0.01) = 0.01;

void fragment() {
	COLOR = texture(TEXTURE, UV);
	float shine = step(1.0 - shine_size * 0.5, 0.5 + 0.5 * sin(UV.x - UV.y + TIME * shine_speed));
	COLOR.rgb = mix(COLOR.rgb, shine_color.rgb, shine * shine_color.a);
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x242d"]
shader = SubResource("Shader_hmw3a")
shader_parameter/shine_color = Color(1, 1, 1, 1)
shader_parameter/shine_speed = 2.5
shader_parameter/shine_size = 0.01

[sub_resource type="CircleShape2D" id="CircleShape2D_y2m6a"]
radius = 150.083

[node name="Collectable" type="Area2D" groups=["Collectables"]]
scale = Vector2(0.5, 0.5)
collision_layer = 4
collision_mask = 2
script = ExtResource("1_rv0oe")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 12
lifetime = 0.8
one_shot = true
explosiveness = 0.8
spread = 180.0
initial_velocity_min = 900.0
initial_velocity_max = 900.0
radial_accel_min = 100.0
radial_accel_max = 100.0
scale_amount_curve = SubResource("Curve_011u0")
color_ramp = SubResource("Gradient_sk0uw")

[node name="SpriteBack" type="Sprite2D" parent="."]
material = ExtResource("2_uvodg")
texture = ExtResource("2_7tenn")

[node name="Sprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_x242d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_y2m6a")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
scale = Vector2(8.59626, -8.43897)

[node name="CollectedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_53su3")
bus = &"Sfx"

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="finished" from="CollectedSound" to="." method="_on_star_collected_sound_finished"]
